feat: removing duplicated role literals