@@ -59,14 +59,6 @@ public class FuncionarioService {
         this.passwordEncoder = passwordEncoder;
     }
 
-    /*
-    @Transactional(readOnly = true)
-    public List<FuncionarioResponseDTO> listarTodos() {
-        return funcionarioRepository.findAll().stream()
-                .map(FuncionarioResponseDTO::new)
-                .collect(Collectors.toList());
-    }*/
-
     @Transactional(readOnly = true)
     public List<FuncionarioResponseDTO> listarTodos(String texto) {
 
@@ -74,13 +66,13 @@ public class FuncionarioService {
             return funcionarioRepository.findAll()
                     .stream()
                     .map(FuncionarioResponseDTO::new)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return funcionarioRepository.buscarPorTexto(texto)
                 .stream()
                 .map(FuncionarioResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
